--- a/backend/.env
+++ b/backend/.env
@@ -2,5 +2,7 @@ MONGO_CONNECTION_STRING="mongodb+srv://workspace20250720:Lxgiwyl0@workspace.sx6r
 EMAIL_USER=battulgabathuyg54@gmail.com
 EMAIL_PASS=jgmx nlpy bcny wpsw
 ADMIN_EMAIL=battulgabathuyg54@gmail.com
+ADMIN_EMAIL=joloenja@gmail.com
+
 
  
