--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
     "dev": "ts-node src/index.ts",
     "start": "nodemon src/index.ts",
     "build": "tsc",
-    "seed:mood": "ts-node scripts/seedMoodData.ts"
+    "seed:mood": "ts-node scripts/seedMoodData.ts",
+    "seed:reward": "ts-node scripts/9DayStraight.ts"
   },
   "author": "",
   "license": "ISC",
