--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-jwt": "^1.3.0",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1",
