--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,9 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "framer-motion": "^12.20.1",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.525.0",
     "mongoose": "^8.15.2",
     "node-cron": "^4.1.1",
     "nodemailer": "^7.0.3",
