--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
+    "framer-motion": "^12.20.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.522.0",
@@ -33,6 +34,7 @@
     "react-icons": "^5.5.0",
     "react-jwt": "^1.3.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.0.2",
     "tailwind-merge": "^3.3.1",
     "yup": "^1.6.1"
   },
